--- a/index.html
+++ b/index.html
@@ -571,20 +571,21 @@
         <div class="col-sm-12 col-md-4 section-md-t3">
           <div class="widget-a">
             <div class="w-header-a">
-              <h3 class="w-title-a text-brand">The Organization</h3>
+              <h3 class="w-title-a text-brand">Organization</h3>
             </div>
             <div class="w-body-a">
               <div class="w-body-a">
                 <ul class="list-unstyled">
                   <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Privacy Policy</a>
+                    <i class="fa fa-angle-right"></i> <a href="#">About</a>
+                  </li>
+                  <li class="item-list-a">
+                    <i class="fa fa-angle-right"></i> <a href="#">Privacy and Policy</a>
                   </li>
                   <li class="item-list-a">
                     <i class="fa fa-angle-right"></i> <a href="#">Terms</a>
                   </li>
-                  <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">About</a>
-                  </li>
+                  
                 </ul>
               </div>
             </div>
