--- a/property-grid.html
+++ b/property-grid.html
@@ -64,12 +64,12 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">Our Amazing Properties</h1>
-              <span class="color-text-a">Grid Properties</span>
+              <h1 class="title-single">Our East African Hubs</h1>
+              <!-- <span class="color-text-a">Grid Properties</span> -->
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
-            <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
+            <!-- <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
                   <a href="#">Home</a>
@@ -78,7 +78,7 @@
                   Properties Grid
                 </li>
               </ol>
-            </nav>
+            </nav> -->
           </div>
         </div>
       </div>
